<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txtNomeCompleto"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/telefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeCompleto" />

    <EditText
        android:id="@+id/txtTelefone"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:hint="Ex: 12-93456-7890"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/telefone" />

    <EditText
        android:id="@+id/txtCidade"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/uf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cidade" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="378dp"
        android:layout_height="34dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/ckIngressarListaEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <CheckBox
        android:id="@+id/ckIngressarListaEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingressar_na_lista_de_e_mails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.086"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/sexo"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        tools:layout_editor_absoluteY="276dp" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="376dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/cidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sexo">

        <RadioButton
            android:id="@+id/rdSexoMasculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masculino"
            app:layout_constraintBottom_toTopOf="@+id/cidade"
            app:layout_constraintEnd_toStartOf="@+id/rdSexoFeminino"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexo" />

        <RadioButton
            android:id="@+id/rdSexoFeminino"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="192dp"
            android:text="@string/feminino"
            app:layout_constraintBottom_toTopOf="@+id/cidade"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sexo" />
    </RadioGroup>

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="187dp"
        android:layout_height="52dp"
        android:layout_marginEnd="12dp"
        android:text="@string/salvar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaUf" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="183dp"
        android:layout_height="52dp"
        android:text="@string/limpar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSalvar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listaUf" />

    <TextView
        android:id="@+id/nomeCompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome_completo"
        app:layout_constraintBottom_toTopOf="@+id/txtNomeCompleto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/telefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        app:layout_constraintBottom_toTopOf="@+id/txtTelefone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomeCompleto" />

    <TextView
        android:id="@+id/email"
        android:layout_width="58dp"
        android:layout_height="22dp"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.043"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTelefone" />

    <TextView
        android:id="@+id/sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckIngressarListaEmail" />

    <TextView
        android:id="@+id/cidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cidade"
        app:layout_constraintBottom_toTopOf="@+id/txtCidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.051"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/uf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uf"
        app:layout_constraintBottom_toTopOf="@+id/listaUf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCidade" />

    <Spinner
        android:id="@+id/listaUf"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:visibility="visible"
        android:entries="@array/listaUf"
        app:layout_constraintBottom_toTopOf="@+id/btnLimpar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uf" />

</androidx.constraintlayout.widget.ConstraintLayout>